fix truncation on explore page

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -214,7 +214,6 @@
 		}
 	}
 
-	.postteaser .markdown,
 	.ellipsis {
 		position: relative;
 		padding-left: 0px;
